v1.0.3
- Fix to fetch latest known chrome version, not latest version
v1.0.2
- Fix syntax to make compatible with python 3.8
- Remove lots of CLI commands
- Improve logging
v1.0.1
- Bugfix: Check for future cancellation before setting, improves error handling.
- Improve error messages and add some type checking for user experience
v1.0.0
- Increase wait for checking regular close
- Decrease freeze for manual bad-close cleanup
- Squash race condition
- Improve parallelization by disabling site-per-process
- Add option for whole new window with create_tab
- General logging improvements