@@ -1,5 +1,6 @@
 v1.0.3
 - Fix to fetch latest known chrome version, not latest version
+- Retry restarting browser once in case of failure after auto-update
 v1.0.2
 - Fix syntax to make compatible with python 3.8
 - Remove lots of CLI commands
